<resources>
    <string name="app_name">Calculator++</string>
    <string name="app_version">Version 1.3</string>
    <string name="invalid_expression">Invalid expression</string>
    <string name="invalid_expression_two">Problem with brackets</string>
    <string name="menu_about">About</string>
    <string name="switch_theme">Switch theme</string>
    <string name="menu_ip_calculator">IP Calculator</string>

    <!-- Number pad -->
    <string name="text_number_zero" translatable="false">0</string>
    <string name="text_number_one" translatable="false">1</string>
    <string name="text_number_two" translatable="false">2</string>
    <string name="text_number_three" translatable="false">3</string>
    <string name="text_number_four" translatable="false">4</string>
    <string name="text_number_five" translatable="false">5</string>
    <string name="text_number_six" translatable="false">6</string>
    <string name="text_number_seven" translatable="false">7</string>
    <string name="text_number_eight" translatable="false">8</string>
    <string name="text_number_nine" translatable="false">9</string>
    <string name="text_sign_comma" translatable="false">,</string>
    <string name="text_sign_equal" translatable="false">=</string>
    <string name="text_sign_additions" translatable="false">+</string>
    <string name="text_sign_subtractions" translatable="false">−</string>
    <string name="text_sign_multiplications" translatable="false">×</string>
    <string name="text_sign_divisions" translatable="false">÷</string>
    <string name="text_sign_pow" translatable="false">^</string>
    <string name="text_sign_sqrt" translatable="false">√</string>
    <string name="text_sign_opening_parenthesis" translatable="false">(</string>
    <string name="text_sign_closing_parenthesis" translatable="false">)</string>
    <string name="text_sign_delete" translatable="false">⌫</string>
    <string name="text_sign_percent" translatable="false">%</string>
    <string name="text_sign_clear" translatable="false">C</string>

    <!-- Engineering Pad -->
    <string name="text_sign_inv" translatable="false">INV</string>
    <string name="text_sign_sin" translatable="false">sin</string>
    <string name="text_sign_arcsin" translatable="false">sin⁻¹</string>
    <string name="text_sign_cos" translatable="false">cos</string>
    <string name="text_sign_arccos" translatable="false">cos⁻¹</string>
    <string name="text_sign_tg" translatable="false">tg</string>
    <string name="text_sign_arctg" translatable="false">tg⁻¹</string>
    <string name="text_sign_mod" translatable="false">mod</string>
    <string name="text_sign_ln" translatable="false">ln</string>
    <string name="text_sign_cbrt" translatable="false">∛</string>
    <string name="text_sign_log" translatable="false">log</string>
    <string name="text_sign_module" translatable="false">|x|</string>
    <string name="text_sign_module_two" translatable="false">abs</string>
    <string name="text_sign_factorial" translatable="false">!</string>
    <string name="text_sign_pi" translatable="false">π</string>
    <string name="text_sign_e" translatable="false">e</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_telegram" translatable="false">Telegram: https://t.me/introvertischeApps</string>
    <string name="about_footer_text">© Alexey Radke, 2021.\n All rights reserved.</string>
    <string name="about_close">Close</string>

    <!-- IP Activity -->
    <string name="text_ip_address" translatable="false">IP address:\u0020</string>
    <string name="text_ip_hint_one">192</string>
    <string name="text_ip_hint_two">162</string>
    <string name="text_ip_hint_tree">0</string>
    <string name="text_dot" translatable="false">.</string>
    <string name="text_mask" translatable="false">Mask:\u0020</string>
    <string name="text_id" translatable="false">ID:\u0020</string>
    <string name="text_switch_id">Enter the id</string>
    <string name="hint_id" translatable="false">000</string>
    <string name="button_calculate" translatable="false">Calculate</string>

    <!-- Spinner array -->
    <string-array name="spinner_mask">
        <item>/32 – 255.255.255.255</item>
        <item>/31 – 255.255.255.254</item>
        <item>/30 – 255.255.255.252</item>
        <item>/29 – 255.255.255.248</item>
        <item>/28 – 255.255.255.240</item>
        <item>/27 – 255.255.255.224</item>
        <item>/26 – 255.255.255.192</item>
        <item>/25 – 255.255.255.128</item>
        <item>/24 – 255.255.255.0</item>
        <item>/23 – 255.255.254.0</item>
        <item>/22 – 255.255.252.0</item>
        <item>/21 – 255.255.248.0</item>
        <item>/20 – 255.255.240.0</item>
        <item>/19 – 255.255.224.0</item>
        <item>/18 – 255.255.192.0</item>
        <item>/17 – 255.255.128.0</item>
        <item>/16 – 255.255.0.0</item>
        <item>/15 – 255.254.0.0</item>
        <item>/14 – 255.252.0.0</item>
        <item>/13 – 255.248.0.0</item>
        <item>/12 – 255.240.0.0</item>
        <item>/11 – 255.224.0.0</item>
        <item>/10 – 255.192.0.0</item>
        <item>/9 – 255.128.0.0</item>
        <item>/8 – 255.0.0.0</item>
        <item>/7 – 254.0.0.0</item>
        <item>/6 – 252.0.0.0</item>
        <item>/5 – 248.0.0.0</item>
        <item>/4 – 240.0.0.0</item>
        <item>/3 – 224.0.0.0</item>
        <item>/2 – 192.0.0.0</item>
        <item>/1 – 128.0.0.0</item>
        <item>/0 – 0.0.0.0</item>
    </string-array>

    <!-- Body -->
    <string name="text_ip">IP:\u0020</string>
    <string name="text_network_class">IP class:\u0020</string>
    <string name="text_network_ip_address">Network IP:\u0020</string>
    <string name="text_subnet_node">Number of nodes:\u0020</string>
    <string name="text_subnet">Number of subnet:\u0020</string>
    <string name="text_first_ip_address">First IP:\u0020</string>
    <string name="text_last_ip_address">Last IP:\u0020</string>
    <string name="text_broadcast_address">Broadcast IP:\u0020</string>

    <!-- Container for decimal values -->
    <string name="dec_title_text">Decimal</string>

    <!-- Container for binary values -->
    <string name="bin_title_text">Binary</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- MainActivity -->
    <string name="error">An unexpected error occurred!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>